compiler/testData/diagnostics/tests/unsignedTypes/callDefaultConstructorOfUnsignedType.kt
// RUN_PIPELINE_TILL: FRONTEND
val foo = <!NO_VALUE_FOR_PARAMETER!>UInt<!>()

/* GENERATED_FIR_TAGS: propertyDeclaration */
